feat: update app title and add custom favicon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>SaaS for Event Service Companies</title>
+    <meta name="description" content="A modern SaaS platform for event service companies to manage their tent rentals and event services." />
+    <meta name="theme-color" content="#1976D2" />
   </head>
   <body>
     <div id="root"></div>
