feat: rebrand from Event Services to Tent Rental Services
- Update all marketing copy and user-facing text from 'Event Services' to 'Tent Rental Services'
- Change package name from 'cheshire-tent-events' to 'cheshire-tent-rentals'
- Update HTML title and meta descriptions for better SEO
- Revise feature descriptions to focus on tent rental services
- Update README with new branding and terminology
- Add rebranding entry to CHANGELOG
- Maintain database schema integrity (event_type, event_date remain as they refer to actual event data)
- Update landing page features and descriptions
- Revise hero section and CTA messaging

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SaaS for Event Service Companies</title>
-    <meta name="description" content="A modern SaaS platform for event service companies to manage their tent rentals and event services." />
+    <title>SaaS for Tent Rental Service Companies</title>
+    <meta name="description" content="A modern SaaS platform for tent rental service companies to manage their tent rentals and tent rental services." />
     <meta name="theme-color" content="#1976D2" />
   </head>
   <body>
